Merged in SKAPI-28-i-want-to-be-able-to-run-unit-a (pull request #21)
SKAPI-28 split unit and integration tests up in api module.  added circleci config.  fixed failing tests.  disabled layers due to a newly discovered issue with layer

* SKAPI-28 split unit and integration tests up in api module.  added circleci config.  fixed failing tests.  disabled layers due to a newly discovered issue with layer

* SKAPI-28 cleanup codacy issues

* SKAPI-28 cleanup codacy issues

* SKAPI-28 cleanup codacy issues

* SKAPI-28 refactor build files to work with circleci. remove deprecated
    gradle code

* SKAPI-28 refactor build files to work with circleci. remove deprecated
    gradle code

* SKAPI-28 refactor build files to work with circleci. remove deprecated
    gradle code

* SKAPI-28 refactor build files to work with circleci. remove deprecated
    gradle code

* SKAPI-28 refactor build files to work with circleci. remove deprecated
    gradle code

* SKAPI-28 refactor build files to work with circleci. remove deprecated
    gradle code

* SKAPI-28 refactor build files to work with circleci. remove deprecated
    gradle code

* SKAPI-28 refactor build files to work with circleci. remove deprecated
    gradle code

* SKAPI-28 refactor build files to work with circleci. remove deprecated
    gradle code

* SKAPI-28 refactor build files to work with circleci. remove deprecated
    gradle code

* SKAPI-28 refactor build files to work with circleci. remove deprecated
    gradle code

* SKAPI-28 refactor build files to work with circleci. remove deprecated
    gradle code

* SKAPI-28 refactor build files to work with circleci. remove deprecated
    gradle code

* SKAPI-28 refactor build files to work with circleci. remove deprecated
    gradle code

* SKAPI-28 refactor build files to work with circleci. remove deprecated
    gradle code

* SKAPI-28 refactor build files to work with circleci. remove deprecated
    gradle code

* SKAPI-28 refactor build files to work with circlec